apps/aiyou_stack/aiyou-fastapi-services/deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cor17-ingress
  namespace: cor17
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "cor17-ip"
    networking.gke.io/managed-certificates: "cor17-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: cor17-api
            port:
              number: 80
